--- a/ControleDeBoletos/ControleDeBoletos/MainWindow.xaml
+++ b/ControleDeBoletos/ControleDeBoletos/MainWindow.xaml
@@ -89,12 +89,12 @@
                     <TextBox x:Name="txtBoxFiltroDescricao" HorizontalAlignment="Left" Margin="10,104,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="193" Height="24"/>
                     <Label Content="Busca de Boletos" HorizontalAlignment="Left" Margin="519,0,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
                     <Label Content="Descrição" HorizontalAlignment="Left" Margin="72,75,0,0" VerticalAlignment="Top" FontSize="14"/>
-                    <Label x:Name="labelSomaTotal" Content="Soma total :" HorizontalAlignment="Left" Margin="161,0,0,-1" VerticalAlignment="Bottom" Width="116" FontSize="20"/>
-                    <Label x:Name="labelSomaAPagar" Content="Soma a pagar :" HorizontalAlignment="Left" Margin="433,0,0,-1" VerticalAlignment="Bottom" FontSize="20"/>
-                    <TextBlock x:Name="txtBlockSomaTotal" HorizontalAlignment="Left" Margin="277,0,0,9" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="151" FontSize="16"/>
-                    <TextBlock x:Name="txtBlockSomaAPagar" HorizontalAlignment="Left" Margin="584,0,0,9" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="132" FontSize="16"/>
-                    <Label x:Name="labelSomaVencida" Content="Soma vencida :" HorizontalAlignment="Left" Margin="721,0,0,0" VerticalAlignment="Bottom" FontSize="20"/>
-                    <TextBlock x:Name="txtBlockSomaVencida" HorizontalAlignment="Left" Margin="868,0,0,9" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="119" FontSize="16"/>
+                    <Label x:Name="labelSomaTotal" Content="Soma total :" HorizontalAlignment="Left" Margin="161,0,0,-1" VerticalAlignment="Bottom" Width="93" FontSize="16"/>
+                    <Label x:Name="labelSomaAPagar" Content="Soma a pagar :" HorizontalAlignment="Left" Margin="405,0,0,-1" VerticalAlignment="Bottom" FontSize="16"/>
+                    <TextBlock x:Name="txtBlockSomaTotal" HorizontalAlignment="Left" Margin="259,0,0,5" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="141" FontSize="16"/>
+                    <TextBlock x:Name="txtBlockSomaAPagar" HorizontalAlignment="Left" Margin="525,0,0,4" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="132" FontSize="16"/>
+                    <Label x:Name="labelSomaVencida" Content="Soma vencida :" HorizontalAlignment="Left" Margin="662,0,0,0" VerticalAlignment="Bottom" FontSize="16"/>
+                    <TextBlock x:Name="txtBlockSomaVencida" HorizontalAlignment="Left" Margin="783,0,0,4" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="119" FontSize="16"/>
                     <Button x:Name="btnBuscarBoletosFiltrados" Content="Buscar" HorizontalAlignment="Left" Margin="970,68,0,0" VerticalAlignment="Top" Width="120" Height="57" FontSize="24" Click="btnBuscarBoletosFiltrados_Click"/>
                     <Button x:Name="btnSalvarAlteracoesBoletosFiltrados" Content="Salvar Alterações" HorizontalAlignment="Right" Margin="0,0,0,4" VerticalAlignment="Bottom" Height="44" Width="161" FontSize="18" Click="btnSalvarAlteracoesBoletosFiltrados_Click"/>
                     <Button x:Name="btnApagarBoletosFiltradosSelecionados" Content="Apagar Selecionados" HorizontalAlignment="Left" Margin="10,0,0,4" VerticalAlignment="Bottom" Height="42" Width="134" FontSize="14" Click="btnApagarBoletosFiltradosSelecionados_Click"/>
@@ -105,8 +105,8 @@
                     <Label Content="/" HorizontalAlignment="Left" Margin="813,61,0,0" VerticalAlignment="Top" FontSize="22"/>
                     <Label Content="Emissão" HorizontalAlignment="Left" Margin="481,68,0,0" VerticalAlignment="Top" FontSize="14"/>
                     <Label Content="Vencimento" HorizontalAlignment="Left" Margin="458,102,0,0" VerticalAlignment="Top" FontSize="14"/>
-                    <Label x:Name="labelSomaSelecionada" Content="Soma selecionada:" HorizontalAlignment="Left" Margin="992,0,0,-1" VerticalAlignment="Bottom" FontSize="20"/>
-                    <TextBlock x:Name="txtBlockSomaSelecionada" HorizontalAlignment="Left" Margin="1170,0,0,9" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="119" FontSize="16"/>
+                    <Label x:Name="labelSomaSelecionada" Content="Soma selecionada:" HorizontalAlignment="Left" Margin="907,0,0,0" VerticalAlignment="Bottom" FontSize="16"/>
+                    <TextBlock x:Name="txtBlockSomaSelecionada" HorizontalAlignment="Left" Margin="1052,0,0,4" TextWrapping="Wrap" Text="-----" VerticalAlignment="Bottom" Width="119" FontSize="16"/>
                     <Label Content="Tipo/Categoria" HorizontalAlignment="Left" Margin="214,80,0,0" VerticalAlignment="Top" FontSize="14"/>
                     <ComboBox x:Name="comboBoxFiltroCategoria" HorizontalAlignment="Left" Margin="208,106,0,0" VerticalAlignment="Top" Width="114" ItemsSource="{Binding ItemComboBox}" DisplayMemberPath="Descricao"/>
                 </Grid>
