--- a/ControleDeBoletos/ControleDeBoletos/App.xaml
+++ b/ControleDeBoletos/ControleDeBoletos/App.xaml
@@ -2,8 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ControleDeBoletos"
-             Startup="OnStartup">
+             Startup="OnStartup"
+             xmlns:hc="https://handyorg.github.io/handycontrol">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:Theme Name="HandyTheme"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
